[package]
edition = "2021"
name = "napi-nodejs-resolver"
version = "0.1.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
nodejs-resolver = "0.0.26"
serde = { version = "1.0.137", features = ["derive"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
